--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ nav {
   padding: 30px 0;
   position: fixed;
   width: 100%;
+  height: 80px;
 }
 
 nav div {
@@ -38,5 +39,99 @@ nav div a:hover {
   background-size: cover;
   width: 100%;
   height: 100vh;
+}
+
+#picture {
+  width: 1200px;
+  margin: 0 auto;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+}
+
+#picture div {
+  height: 260px;
+}
+
+#picture div:nth-child(1) {
+  background: black;
+  font-size: 42px;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  color: blanchedalmond;
+}
+
+#picture div:nth-child(2) {
+  background: url(./img/d-beach-1.jpg);
+  background-size: 100%;
+}
+
+#picture div:nth-child(3) {
+  background: url(./img/d-beach-2.jpg);
+  background-size: 100%;
+}
+
+#content {
+  width: 1200px;
+  margin: 0 auto;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  grid-gap: 50px;
+}
+
+#content h1 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+  padding: 30px 0;
+}
+
+#content p {
+  line-height: 2;
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  nav div {
+    width: 750px;
+    margin: 0 auto;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+    height: 300px;
+  }
+  #picture {
+    width: 750px;
+    margin: 0 auto;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+  #picture div:nth-child(1) {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
+  }
+  #picture div:nth-child(2) {
+    background: url(/img/p-beach-1.jpg);
+  }
+  #picture div:nth-child(3) {
+    background: url(/img/p-beach-2.jpg);
+  }
+  #content {
+    width: 750px;
+    margin: 0 auto;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+  }
 }
 /*# sourceMappingURL=style.css.map */
