--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,7 @@
+@mixin desktop-box {
+    width: 1200px;
+    margin: 0 auto;
+}
 * {
     margin: 0;
     padding: 0;
@@ -9,9 +13,9 @@ nav {
     padding: 30px 0;
     position: fixed;
     width: 100%;
+    height: 80px;
     div{
-        width: 1200px;
-        margin: 0 auto;
+        @include desktop-box();
         a{
             padding: 0 30px;
             color: white;
@@ -31,3 +35,75 @@ nav {
     width: 100%;
     height: 100vh;
 }
+#picture{
+    @include desktop-box();
+    display: grid;
+    grid-template-columns:repeat(3, 1fr);
+
+    div{
+        height: 260px;
+        &:nth-child(1){
+            background: black;
+            font-size: 42px;
+            display: grid;
+            align-items: center;
+            text-align: center;
+            color: blanchedalmond;
+        }
+
+        &:nth-child(2){
+            background: url(./img/d-beach-1.jpg);
+            background-size: 100%;
+        }
+        &:nth-child(3){
+            background: url(./img/d-beach-2.jpg);
+            background-size: 100%;
+        }
+    }
+}
+#content{
+    @include desktop-box();
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-gap: 50px;
+    h1{
+        grid-column: 1/3;
+        padding: 30px 0;
+    }
+    p{
+        line-height: 2;
+        margin-bottom: 20px;
+    }
+
+}
+@media  screen and(min-width:768px) and (max-width:1199px){
+    @mixin table-box  {
+        width: 750px;
+        margin: 0 auto;
+        transition: 0.3s;
+    }
+    nav{
+        div{
+            @include table-box();
+            height: 300px;
+        }
+    }
+    #picture{
+        @include table-box();
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        div:nth-child(1){
+            grid-column: 1/3;
+        }
+        div:nth-child(2){
+            background: url(/img/p-beach-1.jpg);
+        }
+        div:nth-child(3){
+            background: url(/img/p-beach-2.jpg);
+        }
+    }
+    #content{
+        @include table-box();
+    }
+}
+
