--- a/style.css
+++ b/style.css
@@ -134,4 +134,40 @@ nav div a:hover {
     transition: 0.3s;
   }
 }
+
+@media screen and (max-width: 767px) {
+  nav div {
+    width: 100%;
+    margin: 0 auto;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+  }
+  #picture {
+    width: 100%;
+    margin: 0 auto;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  #picture:nth-child(2) {
+    background: url(/img/m-beach-1.png);
+  }
+  #picture:nth-child(3) {
+    background: url(/img/m-beach-2.png);
+  }
+  #content {
+    width: 100%;
+    margin: 0 auto;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  #content h1 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+  }
+}
 /*# sourceMappingURL=style.css.map */
