--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ nav div a:hover {
 }
 
 #banner {
-  background: url(/img/banner.jpg);
+  background: url(./img/banner.jpg);
   background-position: center;
   background-size: cover;
   width: 100%;
@@ -122,10 +122,10 @@ nav div a:hover {
     grid-column: 1/3;
   }
   #picture div:nth-child(2) {
-    background: url(/img/p-beach-1.jpg);
+    background: url(./img/p-beach-1.jpg);
   }
   #picture div:nth-child(3) {
-    background: url(/img/p-beach-2.jpg);
+    background: url(./img/p-beach-2.jpg);
   }
   #content {
     width: 750px;
@@ -151,10 +151,10 @@ nav div a:hover {
         grid-template-columns: 1fr;
   }
   #picture:nth-child(2) {
-    background: url(/img/m-beach-1.png);
+    background: url(./img/m-beach-1.png);
   }
   #picture:nth-child(3) {
-    background: url(/img/m-beach-2.png);
+    background: url(./img/m-beach-2.png);
   }
   #content {
     width: 100%;
