--- a/style.scss
+++ b/style.scss
@@ -29,7 +29,7 @@ nav {
     }
 }
 #banner{
-    background: url(/img/banner.jpg);
+    background: url(./img/banner.jpg);
     background-position: center;
     background-size: cover;;
     width: 100%;
@@ -99,10 +99,10 @@ nav {
             grid-column: 1/3;
         }
         div:nth-child(2){
-            background: url(/img/p-beach-1.jpg);
+            background: url(./img/p-beach-1.jpg);
         }
         div:nth-child(3){
-            background: url(/img/p-beach-2.jpg);
+            background: url(./img/p-beach-2.jpg);
         }
     }
     #content{
@@ -126,10 +126,10 @@ nav {
         @include phone-box();
         grid-template-columns: 1fr;
         &:nth-child(2){
-            background: url(/img/m-beach-1.png);
+            background: url(./img/m-beach-1.png);
         }
         &:nth-child(3){
-            background: url(/img/m-beach-2.png);
+            background: url(./img/m-beach-2.png);
         }
 
     }
