--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ nav {
   padding: 30px 0;
   position: fixed;
   width: 100%;
-  height: 80px;
 }
 
 nav div {
@@ -31,6 +30,10 @@ nav div a {
 nav div a:hover {
   color: deepskyblue;
   font-size: 18px;
+}
+
+#menu {
+  display: none;
 }
 
 #banner {
@@ -104,7 +107,20 @@ nav div a:hover {
     margin: 0 auto;
     -webkit-transition: 0.3s;
     transition: 0.3s;
-    height: 300px;
+    display: none;
+  }
+  nav #menu {
+    display: block;
+  }
+  nav #menu a {
+    display: none;
+  }
+  nav #menu a:nth-child(1) {
+    display: block;
+  }
+  nav #menu:hover a:nth-child(n+2) {
+    display: block;
+    padding: 20px 0;
   }
   #picture {
     width: 750px;
@@ -141,6 +157,20 @@ nav div a:hover {
     margin: 0 auto;
     -webkit-transition: 0.3s;
     transition: 0.3s;
+    display: none;
+  }
+  nav #menu {
+    display: block;
+  }
+  nav #menu a {
+    display: none;
+  }
+  nav #menu a:nth-child(1) {
+    display: block;
+  }
+  nav #menu:hover a:nth-child(n+2) {
+    display: block;
+    padding: 20px 0;
   }
   #picture {
     width: 100%;
