--- a/style.scss
+++ b/style.scss
@@ -13,7 +13,6 @@ nav {
     padding: 30px 0;
     position: fixed;
     width: 100%;
-    height: 80px;
     div{
         @include desktop-box();
         a{
@@ -27,6 +26,9 @@ nav {
             }
         }
     }
+}
+#menu{
+    display: none;
 }
 #banner{
     background: url(./img/banner.jpg);
@@ -88,7 +90,21 @@ nav {
     nav{
         div{
             @include table-box();
-            height: 300px;
+            display: none;
+        }
+        #menu{
+            display: block;
+            a {
+                display: none;
+
+                &:nth-child(1){
+                    display: block;
+                }
+            }
+            &:hover a:nth-child(n+2){
+                display: block;
+                padding: 20px 0;
+            }
         }
     }
     #picture{
@@ -119,6 +135,21 @@ nav {
     nav{
         div{
             @include phone-box();
+            display: none;
+        }
+        #menu{
+            display: block;
+            a {
+                display: none;
+                
+                &:nth-child(1){
+                    display: block;
+                }
+            }
+            &:hover a:nth-child(n+2){
+                display: block;
+                padding: 20px 0;
+            }
         }
     }
 
@@ -141,4 +172,3 @@ nav {
         }
     }
 }
-
